#169 - hermes-integration-service - Add endpoints for categories, update endpoints for tags